bk_ida/gccida/c2/push_to_sequence
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_to_sequence/src/emit-rtl.c:4935:4: error: expected ';' after expression
rtx v5; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_to_sequence/src/emit-rtl.c:4935:5: error: use of undeclared identifier 'v5'
rtx v5; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_to_sequence/src/emit-rtl.c:4942:12: error: expected expression
*( _OWORD *)&v1->first = *( _OWORD *)&emit->x_first_insn; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_to_sequence/src/emit-rtl.c:4942:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->first = *( _OWORD *)&emit->x_first_insn; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_to_sequence/src/emit-rtl.c:4942:37: error: expected expression
*( _OWORD *)&v1->first = *( _OWORD *)&emit->x_first_insn; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_to_sequence/src/emit-rtl.c:4942:29: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->first = *( _OWORD *)&emit->x_first_insn; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_to_sequence/src/emit-rtl.c:4945:12: error: expected expression
*( _OWORD *)&emit->x_first_insn = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_to_sequence/src/emit-rtl.c:4945:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&emit->x_first_insn = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_to_sequence/src/emit-rtl.c:4949:1: error: use of undeclared identifier 'v5'
v5 = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_to_sequence/src/emit-rtl.c:4957:19: error: use of undeclared identifier 'v5'
v6->x_last_insn = v5; 
                  ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/push_to_sequence/src/obj/emit-rtl.o] Error 1
